[package]
name = "derive-state-machine-async"
version = "0.1.0"
authors = ["John Children <john.a.children@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
darling = "0.10"
heck = "0.3"
petgraph = "0.4.13"
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
